Fix logos on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,15 @@ a.social:hover{
         text-align: center;
         margin-top: -1rem;
     }
+
+    .company-logo {
+        min-width: 100%;
+        min-height: 50px;
+        max-height: 50px;
+        text-align: center;
+        margin-top: 16px;
+        margin-bottom: 16px;
+    }
 }
 
 h1, h2 {
